<resources>
    <string name="app_name">contactForm</string>
    <string name="please">Please fill the following form:</string>
    <string name="name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone Number:</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="gender">Gender:</string>
</resources>
